--- a/CRM.Model/App.config
+++ b/CRM.Model/App.config
@@ -12,5 +12,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="AppContext" connectionString="data source=LAPTOP-Q6OP4NL0\SQLEXPRESS;initial catalog=CRM_New_Name;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CRM_Model" connectionString="data source=LAPTOP-Q6OP4NL0\SQLEXPRESS;initial catalog=CRM_System;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
