--- a/CRM.Model/CRM_Model.csproj
+++ b/CRM.Model/CRM_Model.csproj
@@ -45,7 +45,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbModels\Client.cs" />
-    <Compile Include="DbModels\CRM_Model.cs" />
     <Compile Include="DbModels\Employee.cs" />
     <Compile Include="DbModels\Position.cs" />
     <Compile Include="DbModels\Product.cs" />
@@ -57,7 +56,7 @@
     <Compile Include="DbModels\Shipment.cs" />
     <Compile Include="DbModels\Stock.cs" />
     <Compile Include="DbModels\Supply.cs" />
-    <Compile Include="DbModels\Users.cs" />
+    <Compile Include="DbModels\User.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
