--- a/CRM.Context/CRM_Context.csproj
+++ b/CRM.Context/CRM_Context.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CRM_Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestParams.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
