--- a/CRM.Context/CRM_Context.csproj
+++ b/CRM.Context/CRM_Context.csproj
@@ -71,8 +71,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CRM_Model.cs" />
+    <Compile Include="ProductCountsParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestParams.cs" />
+    <Compile Include="SumInYearParam.cs" />
+    <Compile Include="TicketOrClientrParam.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
