--- a/CRM.Context/packages.config
+++ b/CRM.Context/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
 </packages>
