--- a/CRM.Context/packages.config
+++ b/CRM.Context/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt.Net-Next" version="4.0.2" targetFramework="net472" />
   <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
@@ -7,6 +8,10 @@
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
 </packages>
